# project_datatalks_data

./: .gitignore  docker-compose.yml  flows_city_bike.py  flows_city_bike_to_parqet.py  main.py  pyproject.toml
airflow_configuration_and_task/: flows_city_bike_to_parqet.py
airflow_configuration_and_task/dags/: dags_internet_tuto.py  dags_perso.py  task_flow_API_Pipeline.py
airflow_configuration_and_task/data_transform_serices/: task_for_converting_csv_to_parquet.py
city_bike_url_creating_services/: city_bike_url_creating.py
classes_models_services/: files_info_classes.py
data_transform_serices/: task_for_converting_csv_to_parquet.py
get_data_services/: flow_task_get_data_services.py  get_data_services.py  settings.py
prefect_docker_server/: docker-compose.yml
prefect_docker_server/flows/: .prefectignore
prefect_docker_server/flows/flows/: flow.py
prefect_flows_2/: filejson.json  flows_city_bike.py  flows_city_bike_to_parqet.py
prefect_flows_2/classes_models_services/: files_info_classes.py  settings.py
prefect_flows_2/get_data_services/: task_get_data_services.py
prefect_flows_3/data_models/: data_model.py  data_settings.py
prefect_flows_part/: flows_city_bike.py  flows_city_bike_to_parqet.py  main.py
prefect_flows_part/classes_models_services/: files_info_classes.py
prefect_flows_part/get_data_services/: __init__.py  task_get_data_services.py
