[tool.poetry]
name = "project-datatalks-data"
version = "0.1.0"
description = ""
authors = ["Ben_Omar <bennessh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prefect = "2.14.5"


[tool.poetry.group.dev.dependencies]
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
